[Java] fixed findbugs warning
io.joynr.demo.TrafficServiceBroadcastFilter.filter(RadioStation, GeoPosition, RadioBroadcastInterface$NewStationDiscoveredBroadcastFilterParameters)
invokes inefficient Boolean constructor;
use Boolean.valueOf(...) instead 
["io.joynr.demo.TrafficServiceBroadcastFilter"]
At TrafficServiceBroadcastFilter.java:[lines 27-38]

Change-Id: I90f2d85d22eae90f3dc7d7f7a3bccdeb6573c7d4